Fixed collapse button with new navbar

--- a/static/bootstrap/css/bootstrap.css
+++ b/static/bootstrap/css/bootstrap.css
@@ -4634,7 +4634,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .btn-navbar {
   display: none;
   float: right;
-  padding: 7px 10px;
+  padding: 13px 10px;
   margin-right: 5px;
   margin-left: 5px;
   color: #ffffff;
